[package]
name = "hello_cargo"
version = "0.1.0"
authors = ["Webb Hinton <wyhinton@ncsu.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fltk = "1.1.1"
enum_str = "0.1.2"
arraygen = "0.3.0"
iter-enum = "1"
embed-doc-image = "0.1.4"