[package]
name = "iconic_rs"
version = "0.1.0"
authors = ["Webb Hinton <wyhinton189@gmail.com>"]
edition = "2018"
repository = "https://github.com/wyhinton/iconic-rs"
readme = "README.md"
license = "MIT"
description = "Named constants for popular icon fonts."

[lib]
name = "iconic_rs"
crate-type = ["lib"]


[dev-dependencies]
tokio = {version = "0.2.9", features = ["macros", "fs"] }
futures = "0.3.4"
embed-doc-image = "0.1.4"

