[package]
name = "iconic_rs"
version = "0.1.0"
authors = ["Webb Hinton <wyhinton189@gmail.com>"]
edition = "2018"
repository = "https://github.com/wyhinton/iconic-rs"
readme = "README.md"
license = "MIT"
description = "Named constants for popular icon fonts."

[lib]
name = "iconic_rs"
crate-type = ["lib"]


[dev-dependencies]
fltk = "^1.1"
embed-doc-image = "0.1.4"
rust-embed={version = "5.8.0", featrues = ["interpolate-folder-path"]}
